--- a/stylesheet.css
+++ b/stylesheet.css
@@ -77,9 +77,6 @@ h3{
 .skill-img{
   height:50px;
 }
-table{
-  width: 900px;
-}
 tr{
   height:100px;
 }
@@ -104,10 +101,57 @@ footer{
   height: 50px;
 }
 
+
 @media(max-width: 600px){
+  h3{
+    margin-bottom: 0px;
+  }
+  .wrapper{
+    margin: 0 auto;
+    padding: 30px 5%;
+  }
   .work-contents{
     flex-direction: column;
   }
+  .work-left {
+    width:100%;
+    margin-bottom: 20px;
+  }
+  .work-right{
+    width:100%;
+  }
 
+  .about-contents {
+    display: flex;
+    flex-direction: column;
+  }
+  .about-left{
+   width:100%;
+   margin-bottom: 20px;
+  }
+  .about-right{
+    width:100%;
+  }
+  .about-img{
+    border-radius: 20px;
+  }
 
+  table{
+    width: 100%;
+  }
+
+  table th,
+  table td{
+    text-align: center;
+    border-bottom: none;
+    display: block;
+    width: auto;
+  }
+  .kind, .star{
+    width: 100%;
+  }
+  .comment{
+    margin-bottom: 30px;
+  }
+  
 }
