--- a/MONSTER BURGER/stylesheet.css
+++ b/MONSTER BURGER/stylesheet.css
@@ -1,49 +1,65 @@
 @charset "utf-8";
 * { margin: 0; padding: 0; }
 
+/* 共通 */
 html{
   font-size: 100%;
 }
 body{
   background-image: url("img/back.png");
-  height: 2100px;
   font-family: "Yu Gothic", "游ゴシック", YuGothic, "游ゴシック体";
 }
 img{
   max-width: 100%;
   height:auto;
 }
+li{
+  list-style: none;
+}
+h1{
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 40px;
+  margin-bottom: 28px;
+}
 
-.container{
+#home,
+#allow,
+#gallery,
+#information,
+#footer{
+  margin-bottom: 50px;
+}
+
+
+/* 包括 */
+#wrapper{
   text-align: center;
   margin-bottom: 77px;
 }
+#container{
+  margin: 0 5%;
+}
 
-header{
-  /* display: flex;
-  justify-content: space-between; */
+/* ホーム */
+#home{
   position: relative;
 }
 
-.header_contents{
+#header_contents{
   margin-left: 85px;
   margin-top: 80px;
   text-align: left;
 }
-
 .logo{
   display: block;
   margin-bottom: 28px;
 } 
-
-li{
-  
-  list-style: none;
+.sns{
   display: inline-block;
   margin-right: 27px;
 }
 
-.header_img{
+#header_img{
   text-align: right;
   width:628px;
   position: absolute;
@@ -51,32 +67,45 @@ li{
   top:-85px;
 }
 
-
-
-h1{
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-  font-size: 40px;
-  margin-bottom: 28px;
-}
-
-.gallery_contents img{
+/* ギャラリー */
+#gallery_contents img{
   width:776px;
 }
 
-iframe{
+/* インフォメーション */
+.map{
   margin-bottom: 55px;
+  height: 310px;
+  background-color: lightgray;
 }
 
-/* タブレット */
-@media screen and (max-width:1079px){
-  .header_contents,
-  .header_img{
-    width:100%;
+
+
+/* レスポンシブ */
+@media screen and (max-width:600px){
+  /* 共通 */
+  h1{
+    font-size: 20px;
   }
-}
-
-/* スマートフォン */
-@media screen and (max-width:480px){
-
+  /* ホーム */
+  #home{
+    margin: 0 5%;
+  }
+  #header_contents,
+  #header_img{
+    max-width:100%;
+  }
+  #header_contents{
+    margin :30px auto;
+  }
+  #header_img{
+    display: none;
+  }
+  .sns{
+    margin-right: 15px;
+  }
+  .sns img{
+    width: 30px;
+  }
 
 }
