--- a/MONSTER BURGER/stylesheet.css
+++ b/MONSTER BURGER/stylesheet.css
@@ -34,7 +34,6 @@ h1{
 /* 包括 */
 #wrapper{
   text-align: center;
-  margin-bottom: 77px;
 }
 #container{
   margin: 0 5%;
@@ -108,4 +107,17 @@ h1{
     width: 30px;
   }
 
+  /* メイン */
+  #allow img{
+    width: 40px;
+  }
+
+  /* フッター */
+  #footer{
+    margin-bottom: 20px;
+  }
+  #footer img{
+    width: 150px;
+  }
+  
 }
