--- a/shibui/stylesheet.css
+++ b/shibui/stylesheet.css
@@ -11,14 +11,14 @@
 body{
   margin: 0px;
   text-align: center;
-  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
 h1,
 h2,
 h3,
 a{
-  font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif
+  font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
   font-weight: lighter;
 }
 ul{
