--- a/shibui/stylesheet.css
+++ b/shibui/stylesheet.css
@@ -14,7 +14,6 @@ body{
   text-align: center;
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
-
 h1,
 h2,
 h3,
@@ -30,14 +29,11 @@ li{
 }
 a{
   text-decoration: none;
-
 }
 img{
   max-width: 100%;
   vertical-align: top;
-  
 }
-
 #news,
 #message,
 #works,
@@ -70,11 +66,6 @@ img{
 .list a{
   color: #FFF;
 }
-
-nav.show {
-  display: none;
-}
-
 #scroll{
   position: absolute;
   bottom: 8%;
@@ -82,6 +73,15 @@ nav.show {
   transform: translate(-50%);
   color: #FFF;
   font-size: 15px;
+}
+/* スマホ用メニューボタン */
+input[type="checkbox"]{
+  position: fixed;
+  left: -50px;
+}
+.open,
+.close{
+  display: none;
 }
 
 /* タイトル共通 */
@@ -121,8 +121,6 @@ h3{
   margin-right: .5em;
   font-weight: bold;
   min-width: 150px;
-}
-.news_list li:nth-child(2){
 }
 .next{
   text-align: right;
@@ -247,25 +245,55 @@ input[type="submit"]:hover{
   p {
     font-size: 16px;
   }
-  nav{
-    display: none;
+
+  #home{
+    width: 100%;
   }
-  nav.show{
-    display: block;
+  #home h1{
+    font-size: 30px;
+  }
+  #menu{
     position: fixed;
+    width: 100%;
+    height: 100%;
+    z-index: 20;
+  }
+  nav{
+    position: absolute;
+    top: 50px;
+    right: -120px;
+    transition: all 0.2s;
+  }
+  .list{
+    display: block;
+    text-decoration: underline;
+  }
+  .open{
+    display: block;
+    position: absolute;
     width: 30px;
     top: 8px;
     right: 8px;
   }
-  nav.show p{
+  .open p{
     font-size: 12px;
     line-height: 0.5rem;
   }
-
-  #home h1{
-    font-size: 30px;
+  .open:hover{
+    cursor: pointer;
   }
-  
+
+  input[type="checkbox"]:checked ~ nav{
+    right: 0;
+  }
+  input[type="checkbox"]:checked ~ .back{
+    position: absolute;
+    display: block;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(0, 0, 0, .7)!important;
+  }
+
   #works_contents{
     display: block;
   }
