--- a/shibui/stylesheet.css
+++ b/shibui/stylesheet.css
@@ -256,7 +256,7 @@ input[type="submit"]:hover{
     position: fixed;
     width: 100%;
     height: 100%;
-    z-index: 20;
+    z-index: 10;
   }
   nav{
     position: absolute;
@@ -268,21 +268,52 @@ input[type="submit"]:hover{
     display: block;
     text-decoration: underline;
   }
+  .open,
+  span{
+    display: inline-block;
+    transition: all .4s;
+    box-sizing: border-box;
+  }
   .open{
     display: block;
     position: absolute;
-    width: 30px;
+    width: 40px;
+    height: 33px;
     top: 8px;
-    right: 8px;
+    right: 28px;
+    z-index: 10;
   }
-  .open p{
-    font-size: 12px;
-    line-height: 0.5rem;
+  .open span{
+    position: absolute;
+    width: 100%;
+    height: 3px;
+    background-color: #454545;
+    border-radius: 4px;
+  }
+  .open ,span:nth-of-type(1){
+    top: 0;
+  }
+  .open ,span:nth-of-type(2){
+    top: 15px;
+  }
+  .open ,span:nth-of-type(3){
+    bottom: 0;
+  }
+  input[type="checkbox"]:checked ~ .open span:nth-of-type(1) {
+    transform: translateY(15px) rotate(-45deg);
+    background-color: white;
+  }
+  input[type="checkbox"]:checked ~ .open span:nth-of-type(2) {
+    opacity: 0;
+    background-color: white;
+  }
+  input[type="checkbox"]:checked ~ .open span:nth-of-type(3) {
+    transform: translateY(-15px) rotate(45deg);
+    background-color: white;
   }
   .open:hover{
     cursor: pointer;
   }
-
   input[type="checkbox"]:checked ~ nav{
     right: 0;
   }
