--- a/shibui/stylesheet.css
+++ b/shibui/stylesheet.css
@@ -32,7 +32,6 @@ a{
 }
 img{
   max-width: 100%;
-  vertical-align: top;
 }
 #news,
 #message,
@@ -266,6 +265,8 @@ input[type="submit"]:hover{
   }
   .list{
     display: block;
+  }
+  .list a:hover{
     text-decoration: underline;
   }
   .open,
@@ -283,12 +284,15 @@ input[type="submit"]:hover{
     right: 28px;
     z-index: 10;
   }
+  .open:hover{
+    cursor: pointer;
+  }
   .open span{
     position: absolute;
     width: 100%;
     height: 3px;
-    background-color: #454545;
-    border-radius: 4px;
+    background-color: #000;
+    border-radius: 3px;
   }
   .open ,span:nth-of-type(1){
     top: 0;
@@ -311,9 +315,6 @@ input[type="submit"]:hover{
     transform: translateY(-15px) rotate(45deg);
     background-color: white;
   }
-  .open:hover{
-    cursor: pointer;
-  }
   input[type="checkbox"]:checked ~ nav{
     right: 0;
   }
@@ -322,7 +323,7 @@ input[type="submit"]:hover{
     display: block;
     width: 100%;
     height: 100%;
-    background-color: rgb(0, 0, 0, .7)!important;
+    background-color: rgb(0, 0, 0, .8);
   }
 
   #works_contents{
