--- a/stylesheet.css
+++ b/stylesheet.css
@@ -33,7 +33,7 @@ h2{
 #home{
   position: relative;
   width: 100%;
-  height: 750px;
+  height: 700px;
   margin: 0 auto;
   background-color: #fff;
 }
@@ -47,7 +47,7 @@ nav{
 }
 nav ul li{
   display: inline-block;
-  margin: 10px 20px;
+  margin: 20px 20px;
   color: #515151;
   font-size: 12px;
 }
@@ -82,7 +82,7 @@ nav ul li:hover{
 #comment,
 #about{
   margin:100px auto;
-  max-width: 90%;
+  width: 80%;
 }
 
 /* 制作実績 */
@@ -100,6 +100,47 @@ nav ul li:hover{
   font-size: 16px;
   font-weight: lighter;
   color: #515151;
+}
+
+.popup{
+  background-color: rgba(0, 0, 0, 0.8);
+  position: fixed;
+  top:50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 85%;
+  height: 90vh;
+  padding: 20px 50px;
+  overflow-y: scroll;
+  color: #fff;
+  font-size: 30px;
+  opacity: 0;
+  visibility: hidden;
+  transition: all 0.3s;
+}
+.popup h3{
+  font-size: 30px;
+}
+.popup p{
+  color: #fff;
+  font-size: 12px;
+}
+.popup-contents{
+  display: flex;
+  flex-direction: row;
+  margin-top: 20px;
+}
+.popup-contents section{
+  width: 50%;
+  margin-right: 30px;
+}
+.popup-contents aside{
+  width: 20%;
+}
+.show{
+  opacity: 1;
+  visibility: visible;
+  transition: all 0.3s;
 }
 
 /* フッター */
@@ -149,4 +190,13 @@ nav ul li:hover{
   #about img{
     display: none;
   }
-}
+  .popup-contents{
+    display: block;
+  }
+  .popup-contents section{
+    width: 100%;
+    margin-bottom: 20px;
+  }
+  .popup-contents aside{
+    width: 100%;
+  }
